<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <TextView
        android:id="@+id/teditprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="168dp"
        android:text="@string/prof"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="60dp"
        android:onClick="kembali"
        android:text="@string/backend"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/teditprofile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bKembali1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/bKembali1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/leftArrow"
        android:padding="12dp"
        android:src="@drawable/icon_left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        android:onClick="kembali"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/gambarProfile"
        android:layout_width="200dp"
        android:layout_height="166dp"
        android:layout_marginTop="20dp"
        android:background="@color/biruGelap"
        app:layout_constraintBottom_toTopOf="@+id/namaLengkap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teditprofile"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/baseline_person_24" />


    <TextView
        android:id="@+id/namaLengkap"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:text="@string/nama"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:text="@string/email"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/noPonsel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noPonsel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:text="@string/noPonsel"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:text="USERNAME"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editProfile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_round_border"
        android:onClick="fKeEditProfile"
        android:text="@string/editP"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/naLeng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="4dp"
        android:text="@string/nama"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/namaLengkap"
        app:layout_constraintTop_toTopOf="@+id/namaLengkap" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="4dp"
        android:text="@string/email"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="4dp"
        android:text="@string/noPonsel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/noPonsel"
        app:layout_constraintTop_toTopOf="@+id/noPonsel" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Username"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/Username"
        app:layout_constraintTop_toTopOf="@+id/Username" />


</androidx.constraintlayout.widget.ConstraintLayout>