<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <TextView
        android:id="@+id/teditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="156dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/bKembali1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/leftarrow"
        android:onClick="fKeProfile"
        android:padding="12dp"
        android:src="@drawable/icon_left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/teditProfile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/gambarditprofile"
        android:layout_width="176dp"
        android:layout_height="159dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="32dp"
        android:background="@color/biruGelap"
        app:layout_constraintBottom_toTopOf="@+id/NamaLengkap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teditProfile"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/baseline_person_24" />

    <EditText
        android:id="@+id/NamaLengkap"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Nama Lengkap"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/noHp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/updateprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/noHp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="No HP"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tint="@color/white"
        android:backgroundTint="#435585"
        android:clickable="true"
        android:contentDescription="@string/cam"
        android:focusable="true"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/gambarditprofile"
        app:layout_constraintEnd_toEndOf="@+id/gambarditprofile"
        app:srcCompat="@drawable/baseline_photo_camera_24" />

    <Button
        android:id="@+id/updateprofile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="@drawable/button_round_border"
        android:text="@string/updateP"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

